<resources>
    <string name="app_name">HEIA-FR Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh_lessons">Refresh lessons</string>
    <string name="action_find_room">Find a room</string>

    <!-- Main screen -->
    <string name="progress_refresh_lessons_title">Retrieving lessons …</string>
    <string name="new_schedules">New schedules are available !</string>

    <!-- Bottom navigation -->
    <string name="day_0">Monday</string>
    <string name="day_1">Tuesday</string>
    <string name="day_2">Wednesday</string>
    <string name="day_3">Thursday</string>
    <string name="day_4">Friday</string>

    <!-- Welcome screen -->
    <string name="progress_login_title">Login …</string>
    <string name="login_failed">Login failed</string>
    <string name="http_error">HTTP Error</string>
    <string name="unknown_host">No internet connection</string>

    <string name="slide_1_title">Login</string>
    <string name="slide_1_username">Username</string>
    <string name="slide_1_password">Password</string>

    <string name="slide_2_title">Class</string>

    <string name="slide_3_title">You\'re good to go !</string>
    <string name="slide_3_desc">You can now see your schedule !</string>

    <!-- Find a Room screen -->
    <string name="search">Search</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="progress_search_rooms_title">Searching rooms for you …</string>
    <string name="error_end_time_before_start">The end time must be later than the start time</string>
    <string name="warning_first_search">Since this is the first time you want to find a room, the application has to retrieve all lessons of all rooms from the Internet, which can take up to 2 or 3 minutes.</string>

    <!-- Extra keys -->
    <string name="key_extra_class_changed" translatable="false">class_changed</string>

    <!-- Settings Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="display_header">Display</string>
    <string name="infos_header">Informations</string>
    <string name="data_header">Data</string>
    <string name="about_header">About</string>
    <string name="licenses_header">Licenses</string>

    <!-- Settings keys -->
    <string name="settings_key_theme_9" translatable="false">theme_9</string>
    <string name="settings_key_theme_10" translatable="false">theme_10</string>
    <string name="settings_key_class" translatable="false">class</string>
    <string name="settings_key_delete_data" translatable="false">delete_data</string>
    <string name="settings_key_data_schedule_dates" translatable="false">data_schedule_date</string>
    <string name="settings_key_see_github" translatable="false">github</string>
    <string name="settings_key_developer" translatable="false">developer</string>
    <string name="settings_key_license_httpcomponents" translatable="false">license_httpcomponents</string>
    <string name="settings_key_license_jsoup" translatable="false">license_jsoup</string>
    <string name="settings_key_license_moshi" translatable="false">license_moshi</string>
    <string name="settings_key_license_okhttp" translatable="false">license_okhttp</string>
    <string name="settings_key_license_okio" translatable="false">license_okio</string>
    <string name="settings_key_license_selfupdatingapp" translatable="false">license_selfupdatingapp</string>

    <!-- Display Settings -->
    <string name="theme_title">Theme</string>
    <string name="theme_dialog_title">Choose theme</string>

    <!-- Informations Settings -->
    <string name="classes_title">Class</string>
    <string name="classes_dialog_title">Choose your class</string>

    <!-- Data Settings -->
    <string name="delete_data">Delete the local data</string>
    <string name="data_deleted">The local data have been deleted</string>
    <string name="classes_refreshed">The class list has been refreshed</string>
    <string name="data_schedule_dates">Schedule from %1$s to %2$s</string>

    <!-- About Settings -->
    <string name="see_github_title">See the project on GitHub</string>
    <string name="developer_title">Developed by Lucas Bürgy</string>
    <string name="developer_description">Licensed under the GNU GPL v3.0 license</string>

    <!-- Licenses Settings -->
    <string name="license_httpcomponents_title" translatable="false">Apache HttpComponents</string>
    <string name="license_httpcomponents_description">by The Apache Software Foundation, licensed under the Apache 2.0 license</string>
    <string name="license_jsoup_title" translatable="false">jsoup</string>
    <string name="license_jsoup_description">by Jonathan Hedley, licensed under the MIT license</string>
    <string name="license_moshi_title" translatable="false">Moshi</string>
    <string name="license_moshi_description">by Square Open Source, licensed under the Apache 2.0 license</string>
    <string name="license_okhttp_title" translatable="false">OkHttp</string>
    <string name="license_okhttp_description">by Square Open Source, licensed under the Apache 2.0 license</string>
    <string name="license_okio_title" translatable="false">Okio</string>
    <string name="license_okio_description">by Square Open Source, licensed under the Apache 2.0 license</string>
    <string name="license_selfupdatingapp_title" translatable="false">Self Updating App</string>
    <string name="license_selfupdatingapp_description">by Lucas Bürgy, licensed under the GNU GPL v3.0 license</string>

    <!-- selfupdate  -->
    <string name="dialog_update_title">Do you want to update the app ?</string>
    <string name="dialog_downloading_title">Downloading the update …</string>
</resources>
