<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/display_header">

        <ListPreference
            app:defaultValue="MODE_NIGHT_FOLLOW_SYSTEM"
            app:dialogTitle="@string/theme_dialog_title"
            app:entries="@array/settings_theme_10_titles"
            app:entryValues="@array/settings_theme_10_values"
            app:icon="@drawable/ic_theme"
            app:isPreferenceVisible="false"
            app:key="@string/settings_key_theme_10"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="MODE_NIGHT_AUTO_BATTERY"
            app:dialogTitle="@string/theme_dialog_title"
            app:entries="@array/settings_theme_9_titles"
            app:entryValues="@array/settings_theme_9_values"
            app:icon="@drawable/ic_theme"
            app:isPreferenceVisible="false"
            app:key="@string/settings_key_theme_9"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/infos_header">

        <ListPreference
            app:dialogTitle="@string/classes_dialog_title"
            app:icon="@drawable/ic_school"
            app:key="@string/settings_key_class"
            app:title="@string/classes_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/data_header">

        <Preference
            app:icon="@drawable/ic_delete"
            app:key="@string/settings_key_delete_data"
            app:title="@string/delete_data" />

        <Preference
            app:icon="@drawable/ic_calendar"
            app:isPreferenceVisible="false"
            app:key="@string/settings_key_data_schedule_dates" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_header">

        <Preference
            app:icon="@drawable/ic_github"
            app:key="@string/settings_key_see_github"
            app:title="@string/see_github_title" />

        <Preference
            app:icon="@drawable/ic_info"
            app:key="@string/settings_key_developer"
            app:summary="@string/developer_description"
            app:title="@string/developer_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/licenses_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_license_httpcomponents"
            app:summary="@string/license_httpcomponents_description"
            app:title="@string/license_httpcomponents_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_license_jsoup"
            app:summary="@string/license_jsoup_description"
            app:title="@string/license_jsoup_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_license_moshi"
            app:summary="@string/license_moshi_description"
            app:title="@string/license_moshi_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_license_okhttp"
            app:summary="@string/license_okhttp_description"
            app:title="@string/license_okhttp_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_license_okio"
            app:summary="@string/license_okio_description"
            app:title="@string/license_okio_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/settings_key_license_selfupdatingapp"
            app:summary="@string/license_selfupdatingapp_description"
            app:title="@string/license_selfupdatingapp_title" />

    </PreferenceCategory>

</PreferenceScreen>