<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tp07_todolist.MainActivity">

    <item
        android:id="@+id/action_find_room"
        android:icon="@drawable/ic_business"
        android:orderInCategory="1"
        android:title="@string/action_find_room"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_refresh_lessons"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="2"
        android:title="@string/action_refresh_lessons"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
