<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/welcome_screen_horizontal_margin"
    android:paddingTop="@dimen/welcome_screen_vertical_margin"
    android:paddingEnd="@dimen/welcome_screen_horizontal_margin"
    android:paddingBottom="@dimen/welcome_screen_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/slide_title_margin"
            android:text="@string/slide_1_title"
            android:textColor="@color/colorWelcomeAccent"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_outline"
            android:text="@string/slide_1_username"
            android:textColor="@color/colorWelcomeAccent"
            android:textSize="@dimen/slide_desc" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:backgroundTint="@color/colorWelcomeAccent"
                android:inputType="text"
                android:textColor="@color/colorWelcomeAccent"
                android:textSize="@dimen/slide_desc" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/slide_between_desc_big"
            android:drawableStart="@drawable/ic_lock_outline"
            android:text="@string/slide_1_password"
            android:textColor="@color/colorWelcomeAccent"
            android:textSize="@dimen/slide_desc" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWelcomeAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:backgroundTint="@color/colorWelcomeAccent"
                android:inputType="textPassword"
                android:textColor="@color/colorWelcomeAccent"
                android:textSize="@dimen/slide_desc" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>